--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,14 +1,4 @@
-<div class='col-sm-4'>
-    <cd-account-panel></cd-account-panel>
-</div>
-<div class='col-sm-4'>
-    <cd-password-panel></cd-password-panel>
-</div>
-<div class='col-sm-4'>
-      <cd-delete-account-panel></cd-delete-account-panel>
-</div>
-<div class='col-sm-4 well'>
-    <h4>
-        <cd-logout>Click here to logout!</cd-logout>
-    </h4>
+<h1 class='text-center lead well'>Your appointments:</h1>
+<div class='col-sm-12'>
+    <cd-appointments-table></cd-appointments-table>
 </div>
