--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,4 +1,6 @@
-<h1 class='text-center lead well'>Your appointments:</h1>
+<h1 class='text-center lead well'>
+<cd-current-time></cd-current-time>
+</h1>
 <div class='col-sm-12'>
     <cd-appointments-table></cd-appointments-table>
 </div>
