--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,6 +1,14 @@
-<h1 class='text-center lead well'>
-<cd-current-time></cd-current-time>
-</h1>
+<div class='well well-sm'>
+    <h3 class='text-center lead'>
+        Welcome,
+        <cd-user-name></cd-user-name>
+    </h3>
+    <h2 class='text-center lead'>
+        Current time is
+        <cd-current-time></cd-current-time>
+    </h2>
+</div>
+
 <div class='col-sm-12'>
     <cd-appointments-table></cd-appointments-table>
 </div>
