--- a/client/views/header.html
+++ b/client/views/header.html
@@ -1,6 +1,6 @@
 <div class='text-center'>
-    <h1>Welcome!
-        <small>This is the default header</small>
+    <h1>ICough
+        <small>doctor's appointments made easy</small>
     </h1>
 </div>
 <hr/>
