Added directive for appointment home table

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -10,5 +10,5 @@
 </div>
 
 <div class='col-sm-12'>
-    <cd-appointments-table></cd-appointments-table>
+    <cd-appointments-table-home></cd-appointments-table>
 </div>
